<resources>
    <string name="app_name">Power Wifi Direct</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_prefs">Preferences</string>
    <string name="title_uploads">Uploads</string>
    <string name="clear_search">Clear search</string>
    <string name="request">Request</string>
    <string name="go_to_requests_list">Go to requests list</string>
    <string name="transfers">Transfers</string>
    <string name="uploads">Uploads</string>
    <string name="downloads">Downloads</string>
    <string name="uploading">Uploading</string>
    <string name="no_files_uploading">No files uploading</string>
    <string name="no_files_downloading">No files downloading</string>
    <string name="pending">Pending</string>
    <string name="no_pending_files">No pending files</string>
    <string name="history">History</string>
    <string name="received_searches">Received Searches</string>
</resources>