<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kydah.powerwifidirect.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_uploads"
            app:destination="@id/navigation_uploads" />
    </fragment>

    <fragment
        android:id="@+id/navigation_uploads"
        android:name="com.kydah.powerwifidirect.ui.uploads.UploadsFragment"
        android:label="@string/title_uploads"
        tools:layout="@layout/fragment_uploads" >
        <action
            android:id="@+id/action_navigation_uploads_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.kydah.powerwifidirect.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_prefs"
        android:name="com.kydah.powerwifidirect.ui.preferences.PreferencesFragment"
        android:label="@string/title_prefs"
        tools:layout="@layout/fragment_prefs" />
</navigation>