<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploading"
            android:textSize="20sp"
            style="@style/TextAppearanceTheme"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/uploading_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/no_uploading_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TextAppearanceTheme"
            android:text="@string/no_files_uploading"
            android:textSize="16sp"
            android:paddingVertical="50dp"
            android:visibility="gone"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textSize="20sp"
            style="@style/TextAppearanceTheme"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pending_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/no_pending_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TextAppearanceTheme"
            android:text="@string/no_pending_files"
            android:textSize="16sp"
            android:paddingVertical="50dp"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
