<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:padding="10dp">

        <TextView
            android:id="@+id/currently_serving_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/device_info_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CardViewTheme"
            app:layout_constraintTop_toBottomOf="@id/currently_serving_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/device_name_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearanceTheme"
                    android:text="Device Name Placeholder"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearanceTheme"
                    android:text="Device address placeholder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearanceTheme"
                    android:text="Files hosting" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/transfers_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/TextAppearanceTheme"
            android:text="@string/transfers"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/device_info_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/transfer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/transfers_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/upload_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonTheme"
                    android:src="@drawable/ic_upload"
                    android:contentDescription="@string/uploads"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/TextAppearanceTheme"
                    android:textSize="16sp"
                    android:text="@string/uploads" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/download_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonTheme"
                    android:src="@drawable/ic_download"
                    android:contentDescription="@string/downloads"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/TextAppearanceTheme"
                    android:textSize="16sp"
                    android:text="@string/downloads" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/transfer_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
